--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,13 @@
 ---
 layout : default
 ---
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
 "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Stefano Oldeman's</title>
-
+    <link rel="stylesheet" href="{{site.app.media_path}}/css/style{{site.app.minified}}.css?{{site.app.version}}" type="text/css" media="all" />
 </head>
 <body>
     <h1>{{page.title}} {% if page.tagline %}<sub>{{page.tagline}}</sub>{% endif %}</h1>
@@ -55,6 +54,7 @@ layout : default
             </ul>
         <address>
     </div>
+
+    <script type="text/javascript" src="{{site.app.media_path}}/js/main{{site.app.minified}}.js?{{site.app.version}}" charset="utf-8"></script>
 </body>
 </html>
-
