tweak some html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,32 +15,20 @@ layout : default
     <div id="big_navigation">
         <h2 style="display:hidden">Navigation</h2>
         <ul>
+            <li><a href="https://github.com/stefanooldeman">Github profile</a></li>
             <li><a href="#articles">Articles</a></li>
             <li><a href="#projects">Projects</a>
                 <ul>
-                    <li><a href="/projects/poker">Poker</a></li>
-                    <li><a href="/projects/triage">Triage</a>
-                    <li><a href="/projects/blogwrapper">blogwrapper</a>
-                    <li><a href="/projects/glitch">Glitch</a></li>
-                    <li><a href="/projects/solarium">Solarium</a></li>
+                    <li><a href="https://github.com/stefanooldeman/Poker">Poker (haskell)</a></li>
+                    <li><a href="/projects/forum">Triage (php)</a>
+                    <li><a href="https://github.com/stefanooldeman/tic-tac-toe">Tic tac toe (c#)</a>
+                    <li><a href="https://github.com/stefanooldeman/dotfiles">Vim and shell files</a></li>
                 </ul>
             </li>
-            <li><a href="https://github.com/stefanooldeman">https://github.com/stefanooldeman</a></li>
         </ul>
     </div>
 
     {{content}}
-
-    <div id="projects">
-        <h3>Projects</h3>
-        <ul class="direct_links">
-            <li><a href="/projects/poker">Poker</a></li>
-            <li><a href="/projects/triage">Triage</a>
-            <li><a href="/projects/blogwrapper">blogwrapper</a>
-            <li><a href="/projects/glitch">Glitch</a></li>
-            <li><a href="/projects/solarium">Solarium</a></li>
-        </ul>
-    </div>
 
     <div id="footer">
         <address>
