fixing the site structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 ---
+title: Stefano Oldeman's pages 
 layout : default
 ---
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-"http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -16,7 +16,8 @@ layout : default
         <h2 style="display:hidden">Navigation</h2>
         <ul>
             <li><a href="https://github.com/stefanooldeman">Github profile</a></li>
-            <li><a href="#articles">Articles</a></li>
+            <li><a href="/">Articles</a></li>
+            <li><a href="/about.html">About</a></li>
             <li><a href="#projects">Projects</a>
                 <ul>
                     <li><a href="https://github.com/stefanooldeman/Poker">Poker (haskell)</a></li>
@@ -31,16 +32,6 @@ layout : default
     {{content}}
 
     <div id="footer">
-        <address>
-            <p>Here a list of sites where you can find me</p>
-            <ul>
-                <li><a href="https://google.com/profiles/stefano.oldeman">Google profile</a></li>
-                <li><a href="https://twitter.com/stefanooldeman">Twitter feed</a></li>
-                <li><a href="https://foursquare.com/stefanooldeman/badges/all">My Foursquare badges</a></li>
-                <li><a href="http://www.last.fm/user/EarOrgasms">My last.fm</a></li>
-                <li><a href="https://forrst.com/people/stefanooldeman">I'm on forrst.com</a></li>
-            </ul>
-        <address>
     </div>
 
     <script type="text/javascript" src="{{site.app.media_path}}/js/main{{site.app.minified}}.js?{{site.app.version}}" charset="utf-8"></script>
