--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,40 +1,6 @@
 ---
-title: Stefano Oldeman's posts
-layout : post
+layout : default
+type: post
 ---
-<!DOCTYPE HTML>
-<html>
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Stefano Oldeman's</title>
-    <link rel="stylesheet" href="{{site.app.media_path}}/css/style{{site.app.minified}}.css?{{site.app.version}}" type="text/css" media="all" />
-</head>
-<body>
-    <h1>{{page.title}} {% if page.tagline %}<sub>{{page.tagline}}</sub>{% endif %}</h1>
-
-    <div id="big_navigation">
-        <h2 style="display:hidden">Navigation</h2>
-        <ul>
-            <li><a href="#articles">home</a></li>
-        </ul>
-    </div>
 
     {{content}}
-
-    <div id="footer">
-        <address>
-            <p>Here a list of sites where you can find me</p>
-            <ul>
-                <li><a href="https://google.com/profiles/stefano.oldeman">Google profile</a></li>
-                <li><a href="https://twitter.com/stefanooldeman">Twitter feed</a></li>
-                <li><a href="https://foursquare.com/stefanooldeman/badges/all">My Foursquare badges</a></li>
-                <li><a href="http://www.last.fm/user/EarOrgasms">My last.fm</a></li>
-                <li><a href="https://forrst.com/people/stefanooldeman">I'm on forrst.com</a></li>
-            </ul>
-        <address>
-    </div>
-
-    <script type="text/javascript" src="{{site.app.media_path}}/js/main{{site.app.minified}}.js?{{site.app.version}}" charset="utf-8"></script>
-</body>
-</html>
-
