--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,37 +1,32 @@
----
-title: Stefano Oldeman's pages 
-layout : default
----
-<!DOCTYPE HTML>
+<!doctype html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Stefano Oldeman's</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="keywords" content="stefano oldeman, stefanooldeman" />
+    <title>Stefano Oldeman's / {% if page.type == 'post' %} {{page.title}} {% else %} {{page.type}} {% endif %}</title>
     <link rel="stylesheet" href="{{site.app.media_path}}/css/style{{site.app.minified}}.css?{{site.app.version}}" type="text/css" media="all" />
 </head>
 <body>
-    <h1>{{page.title}} {% if page.tagline %}<sub>{{page.tagline}}</sub>{% endif %}</h1>
-
-    <div id="big_navigation">
-        <h2 style="display:hidden">Navigation</h2>
-        <ul>
-            <li><a href="https://github.com/stefanooldeman">Github profile</a></li>
-            <li><a href="/">Articles</a></li>
+    <div id="container">
+        <h1>
+            <a href="/">Stefano Oldeman's {{page.type}}</a>
+            <sub>
+                {% if page.type == 'post' %}
+                    {{page.title}}
+                {% endif %}
+            </sub>
+        </h1>
+        <ul id="menu">
             <li><a href="/about.html">About</a></li>
-            <li><a href="#projects">Projects</a>
-                <ul>
-                    <li><a href="https://github.com/stefanooldeman/Poker">Poker (haskell)</a></li>
-                    <li><a href="/projects/forum">Triage (php)</a>
-                    <li><a href="https://github.com/stefanooldeman/tic-tac-toe">Tic tac toe (c#)</a>
-                    <li><a href="https://github.com/stefanooldeman/dotfiles">Vim and shell files</a></li>
-                </ul>
+            <li>
+                <form>
+                    <input type="search" id="st-search-input" class="st-search-input" placeholder="Search" />
+                </form>
+                <div id="st-results-container"></div>
             </li>
         </ul>
-    </div>
 
-    {{content}}
-
-    <div id="footer">
+        {{ content }}
     </div>
 
     <script type="text/javascript" src="{{site.app.media_path}}/js/main{{site.app.minified}}.js?{{site.app.version}}" charset="utf-8"></script>
