--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="stefano oldeman, stefanooldeman" />
     <link rel="stylesheet" href="{{site.app.media_path}}/css/style{{site.app.minified}}.css?{{site.app.version}}" type="text/css" media="all" />
-    <link rel="stylesheet" href="{{site.app.media_path}}/css/pygment_trac.css">
+    <link rel="stylesheet" href="{{site.app.media_path}}/css/pygment_trac{{site.app.minified}}.css?{{site.app.version}}" type="text/css" media="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -31,11 +31,9 @@
         {{ content }}
       </section>
       <footer>
-        <p><small>Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+          <p><small>Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script type="text/javascript" src="{{site.app.media_path}}/js/scale.fix.{{site.app.minified}}.js?{{site.app.version}}" charset="utf-8"></script>
-    <script type="text/javascript" src="{{site.app.media_path}}/js/main{{site.app.minified}}.js?{{site.app.version}}" charset="utf-8"></script>
-    
+    <script type="text/javascript" src="{{site.app.media_path}}/js/scale.fix{{site.app.minified}}.js?{{site.app.version}}" charset="utf-8"></script>
   </body>
 </html>
